Fim primeira leitura da resenha monetaristas turma A

--- a/Materias/2S2020/PED_CE342/Turma_A/187323.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/187323.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 240409 - Luísa Mendes Amstalden
+#+TITLE: 187323 - Tatiana Marchiori Keller
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 240409
-#+PROPERTY: NOME "Luísa Mendes Amstalden"
+#+PROPERTY: RA 187323
+#+PROPERTY: NOME "Tatiana Marchiori Keller"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -20,18 +20,18 @@
   #+BEGIN: columnview :maxlevel 3 :id global
   #+END
 
-* Resenha  1:  Monetaristas                                         :private:
+* Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
-  :OBJETIVO: Atingido satisfatoriamente
-  :ARGUMENTO: Atingido parcialmente
-  :CONCEITOS: Atingido parcialmente
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido satisfatoriamente
   :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido totalmente
   :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido satisfatoriamente
+  :NOTA:     Atingido totalmente
   :END:
-  
+
 ** Comentários individuais 
 
-Em seus parágrafos de abertura, destacou corretamente as implicações da escola monetarista e seu contraponto ao keynesianismo. O mesmo vale para a curva de Phillips aceleracionista e suas antecedentes. Ao explicar o mecanismo que gera inflação, incorreu em algumas imprecisões. Não mencionou que os agentes formam expectativas adaptativas e mencionou que as "expectativas aumentam". Mais precisamente, pode-se dizer que as expectativas são de que os preços aumentem. Um ponto importante também que não apareceu até agora é a da TQM. Uma implicação dela é que a demanda por moeda é estável e, assim, a sequência iniciada pela expansão da demanda agregada se verificaria. Fica aqui o registro de que apresentou as expectativas adaptativas mais adiante. Poderia ter antecipado esta discussão para facilitar a explicação da ilusão monetária. Mais a frente, corretamente destaca as proposições supply-side. Por fim, não houve nenhuma menção à TQM e suas implicações. Este último ponto é o que mais te prejudicou.
+Seu parágrafo de abertura é uma boa forma de introduzir o problema analisado pelo autor. No parágrafo seguinte, foram pontuados os elementos centrais do monetarismo. Adiante, ao descrever a ilusão monetária, incorreu em uma possível imprecisão. Quando ocorre, o trabalhador compreender aumentos nominais no salário tal como se fossem reais (isso esta na resenha). No entanto, como formam expectativas adaptativas, a informação sobre o nível de preços não é imediatamente corrigida (também esta na resenha). Porém, nada impede que o salário seja menor em termos reais (na resenha esta restrito à correção pela inflação, ou seja, manutenção em termos reais). Em seguida, corretamente apresenta a proposição de política econômica do monetarismo. Adiante, associa essa proposição ao embasamento da TQM. Poderia apenas ter se aprofundado mais nas hipóteses e implicações da TQM (notadamente, estabilidade da demanda por moeda)
