--- a/Materias/2S2020/PED_CE342/Turma_A/206194.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/206194.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 240409 - Luísa Mendes Amstalden
+#+TITLE: 206194 - Thiago Alexandre Ramos dos Reis
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 240409
-#+PROPERTY: NOME "Luísa Mendes Amstalden"
+#+PROPERTY: RA 206194
+#+PROPERTY: NOME "Thiago Alexandre Ramos dos Reis"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -20,18 +20,18 @@
   #+BEGIN: columnview :maxlevel 3 :id global
   #+END
 
-* Resenha  1:  Monetaristas                                         :private:
+* Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
   :OBJETIVO: Atingido satisfatoriamente
-  :ARGUMENTO: Atingido parcialmente
-  :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
-  :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido satisfatoriamente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
   :END:
-  
+
 ** Comentários individuais 
 
-Em seus parágrafos de abertura, destacou corretamente as implicações da escola monetarista e seu contraponto ao keynesianismo. O mesmo vale para a curva de Phillips aceleracionista e suas antecedentes. Ao explicar o mecanismo que gera inflação, incorreu em algumas imprecisões. Não mencionou que os agentes formam expectativas adaptativas e mencionou que as "expectativas aumentam". Mais precisamente, pode-se dizer que as expectativas são de que os preços aumentem. Um ponto importante também que não apareceu até agora é a da TQM. Uma implicação dela é que a demanda por moeda é estável e, assim, a sequência iniciada pela expansão da demanda agregada se verificaria. Fica aqui o registro de que apresentou as expectativas adaptativas mais adiante. Poderia ter antecipado esta discussão para facilitar a explicação da ilusão monetária. Mais a frente, corretamente destaca as proposições supply-side. Por fim, não houve nenhuma menção à TQM e suas implicações. Este último ponto é o que mais te prejudicou.
+Em seu parágrafo inicial, consta que a proposição de políticas monetárias é a principal proposição do monetarismo. Mais precisamente, seria a recomendação de regras monetárias. Mais a frente esclarece esse ponto. O restante desde parágrafo esta um pouco repetitivo e confuso. Adiante pontua os principais elementos da escola monetarista. No parágrafo seguinte associa corretamente a TQM à compreensão das causas da inflação. Poderia apenas ter enfatizado mais a implicação de estabilidade na demanda por moeda. Ao descrever as implicações da ilusão monetária, dá muita atenção aos elementos da demanda (multiplicador). Seria mais adequado focar em fatores do lado da oferta como é o caso da maior oferta de trabalho pelos trabalhadores na leitura de que os salários reais estão aumentando. Logo em seguida é pontuada essa questão pelo lado da oferta. No parágrafo final, dá a entender que os países adotaram a TQM e não regras monetárias.
