--- a/Materias/2S2020/PED_CE342/Turma_A/219613.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/219613.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 240409 - Luísa Mendes Amstalden
+#+TITLE: 219613 - Keivan de Castro Almeida G. de Souza
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 240409
-#+PROPERTY: NOME "Luísa Mendes Amstalden"
+#+PROPERTY: RA 219613
+#+PROPERTY: NOME "Keivan de Castro Almeida G. de Souza"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -20,18 +20,18 @@
   #+BEGIN: columnview :maxlevel 3 :id global
   #+END
 
-* Resenha  1:  Monetaristas                                         :private:
+* Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
-  :OBJETIVO: Atingido satisfatoriamente
-  :ARGUMENTO: Atingido parcialmente
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido satisfatoriamente
   :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido parcialmente
   :CONCLUSAO: Atingido satisfatoriamente
   :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido satisfatoriamente
+  :NOTA:     Atingido parcialmente
   :END:
-  
+
 ** Comentários individuais 
 
-Em seus parágrafos de abertura, destacou corretamente as implicações da escola monetarista e seu contraponto ao keynesianismo. O mesmo vale para a curva de Phillips aceleracionista e suas antecedentes. Ao explicar o mecanismo que gera inflação, incorreu em algumas imprecisões. Não mencionou que os agentes formam expectativas adaptativas e mencionou que as "expectativas aumentam". Mais precisamente, pode-se dizer que as expectativas são de que os preços aumentem. Um ponto importante também que não apareceu até agora é a da TQM. Uma implicação dela é que a demanda por moeda é estável e, assim, a sequência iniciada pela expansão da demanda agregada se verificaria. Fica aqui o registro de que apresentou as expectativas adaptativas mais adiante. Poderia ter antecipado esta discussão para facilitar a explicação da ilusão monetária. Mais a frente, corretamente destaca as proposições supply-side. Por fim, não houve nenhuma menção à TQM e suas implicações. Este último ponto é o que mais te prejudicou.
+Corretamente situa o keynesianismo (ortodoxo) enquanto escola predominante pré-monetaristas. No entanto, ao descrevê-la incorre na imprecisão de que a moeda não era relevante. Mais precisamente, seria a política monetária que deixa de ser eficaz em algumas condições. Além disso, para Keynes, a moeda era bastante relevante. Adiante, corretamente pontua as regras monetárias enquanto principal proposição do monetarismo. Em seguida, corretamente pontua que o monetarismo parte da hipótese de que as economias são estáveis. No entanto, tal hipótese não pode ser desassociada da TQM. Adiante, expõe corretamente quais são os determinantes da demanda por moeda, mas não pontua que isso implica estabilidade. Adiante, descreve corretamente os efeitos de curto prazo da política monetária. No entanto, dá a entender que a expansão monetária não é indiscriminadamente no longo prazo por ser insustentável (vide explosão inflacionária). Este argumento está quase completo, faltou mencionar que a economia convergiria, na ausência de distúrbios monetários, à taxa natural de desemprego e, portanto, não geraria efeitos reais.
