--- a/Materias/2S2020/PED_CE342/Turma_A/241430.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/241430.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 240409 - Luísa Mendes Amstalden
+#+TITLE: 241430 - Marina de Marco Santucci
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 240409
-#+PROPERTY: NOME "Luísa Mendes Amstalden"
+#+PROPERTY: RA 241430
+#+PROPERTY: NOME "Marina de Marco Santucci"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -20,18 +20,18 @@
   #+BEGIN: columnview :maxlevel 3 :id global
   #+END
 
-* Resenha  1:  Monetaristas                                         :private:
+* Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
   :OBJETIVO: Atingido satisfatoriamente
   :ARGUMENTO: Atingido parcialmente
   :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
   :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido satisfatoriamente
+  :NOTA:     Atingido parcialmente
   :END:
-  
+
 ** Comentários individuais 
 
-Em seus parágrafos de abertura, destacou corretamente as implicações da escola monetarista e seu contraponto ao keynesianismo. O mesmo vale para a curva de Phillips aceleracionista e suas antecedentes. Ao explicar o mecanismo que gera inflação, incorreu em algumas imprecisões. Não mencionou que os agentes formam expectativas adaptativas e mencionou que as "expectativas aumentam". Mais precisamente, pode-se dizer que as expectativas são de que os preços aumentem. Um ponto importante também que não apareceu até agora é a da TQM. Uma implicação dela é que a demanda por moeda é estável e, assim, a sequência iniciada pela expansão da demanda agregada se verificaria. Fica aqui o registro de que apresentou as expectativas adaptativas mais adiante. Poderia ter antecipado esta discussão para facilitar a explicação da ilusão monetária. Mais a frente, corretamente destaca as proposições supply-side. Por fim, não houve nenhuma menção à TQM e suas implicações. Este último ponto é o que mais te prejudicou.
+Seu parágrafo de abertura faz uma contextualização histórica e teórica do monetarismo, mas esta um pouco redundante em alguns pontos. Em seguida, descreve corretamente o conceito de taxa natural de desemprego, mas poderia ter sido um pouco mais preciso (especialmente quando diz "ações humanas"). Adiante, propõe uma problematização das proposições de política econômica a la monetaristas. No parágrafo seguinte é pontuado que o aumento no estoque de moeda implica maiores taxas de inflação. No entanto, não é feita uma mediação entre esta discussão e a anterior bem como não é argumentado o porquê desta relação de causalidade. Uma forma de mediar essa discussão é por meio da TQM, até então não analisada. Em seguida, descreve corretamente a ilusão monetária e sua relação com inflação surpresa e expectativas adaptativas. Depois, faz um contraponto do monetarismo à escola precedente inclui a discussão da TQM. Neste ponto, poderia ter se aprofundado mais em suas hipóteses e implicações (especialmente estabilidade na demanda por moeda). Mais a frente essa discussão aparece, mas não ocupa um papel de destaque na argumentação. Encerra a resenha fazendo uma contextualização da perda de capacidade explicativa do monetarismo.
