--- a/Materias/2S2020/PED_CE342/Turma_A/255293.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/255293.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 240409 - Luísa Mendes Amstalden
+#+TITLE: 255293 - Maria Júlia Faustino da Silva
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 240409
-#+PROPERTY: NOME "Luísa Mendes Amstalden"
+#+PROPERTY: RA 255293
+#+PROPERTY: NOME "Maria Júlia Faustino da Silva"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -20,18 +20,18 @@
   #+BEGIN: columnview :maxlevel 3 :id global
   #+END
 
-* Resenha  1:  Monetaristas                                         :private:
+* Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
-  :OBJETIVO: Atingido satisfatoriamente
+  :OBJETIVO: Atingindo minimamente
   :ARGUMENTO: Atingido parcialmente
-  :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
-  :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido satisfatoriamente
+  :CONCEITOS: Atingindo minimamente
+  :DESENVOLVIMENTO: Atingindo minimamente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingindo minimamente
   :END:
-  
+
 ** Comentários individuais 
 
-Em seus parágrafos de abertura, destacou corretamente as implicações da escola monetarista e seu contraponto ao keynesianismo. O mesmo vale para a curva de Phillips aceleracionista e suas antecedentes. Ao explicar o mecanismo que gera inflação, incorreu em algumas imprecisões. Não mencionou que os agentes formam expectativas adaptativas e mencionou que as "expectativas aumentam". Mais precisamente, pode-se dizer que as expectativas são de que os preços aumentem. Um ponto importante também que não apareceu até agora é a da TQM. Uma implicação dela é que a demanda por moeda é estável e, assim, a sequência iniciada pela expansão da demanda agregada se verificaria. Fica aqui o registro de que apresentou as expectativas adaptativas mais adiante. Poderia ter antecipado esta discussão para facilitar a explicação da ilusão monetária. Mais a frente, corretamente destaca as proposições supply-side. Por fim, não houve nenhuma menção à TQM e suas implicações. Este último ponto é o que mais te prejudicou.
+Em seus parágrafos de abertura, corretamente apontou que os monetaristas propõem uma meta de monetária. Quando pontou a controvérsia entre monetaristas e keynesianos, poderia ter adequado melhor a escrita para uma resenha acadêmica. Além disso, caberia ser mais específico do que ``vaŕias críticas''. Uma possível discussão neste ponto seria acerca do embate entre regras e discricionariedade. Corretamente destacou que taxa de desemprego abaixo do nível natural implicaria inflação, mas não especificou os mecanismos associados a esse resultado. De modo geral, houve pouca discussão sobre os fundamentos teóricos monetaristas, em especial sobre a TQM.
