--- a/Materias/2S2020/PED_CE342/Turma_A/218090.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/218090.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 240409 - Luísa Mendes Amstalden
+#+TITLE: 218090 - Isabela de Oliveira Garcia
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 240409
-#+PROPERTY: NOME "Luísa Mendes Amstalden"
+#+PROPERTY: RA 218090
+#+PROPERTY: NOME "Isabela de Oliveira Garcia"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -20,18 +20,18 @@
   #+BEGIN: columnview :maxlevel 3 :id global
   #+END
 
-* Resenha  1:  Monetaristas                                         :private:
+* Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
-  :OBJETIVO: Atingido satisfatoriamente
-  :ARGUMENTO: Atingido parcialmente
-  :CONCEITOS: Atingido parcialmente
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido satisfatoriamente
   :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido totalmente
   :CLAREZA:  Atingido satisfatoriamente
   :NOTA:     Atingido satisfatoriamente
   :END:
-  
+
 ** Comentários individuais 
 
-Em seus parágrafos de abertura, destacou corretamente as implicações da escola monetarista e seu contraponto ao keynesianismo. O mesmo vale para a curva de Phillips aceleracionista e suas antecedentes. Ao explicar o mecanismo que gera inflação, incorreu em algumas imprecisões. Não mencionou que os agentes formam expectativas adaptativas e mencionou que as "expectativas aumentam". Mais precisamente, pode-se dizer que as expectativas são de que os preços aumentem. Um ponto importante também que não apareceu até agora é a da TQM. Uma implicação dela é que a demanda por moeda é estável e, assim, a sequência iniciada pela expansão da demanda agregada se verificaria. Fica aqui o registro de que apresentou as expectativas adaptativas mais adiante. Poderia ter antecipado esta discussão para facilitar a explicação da ilusão monetária. Mais a frente, corretamente destaca as proposições supply-side. Por fim, não houve nenhuma menção à TQM e suas implicações. Este último ponto é o que mais te prejudicou.
+Apesar de curtos, seus dois primeiros parágrafos de aberturam possuem informação suficiente para contextualizar a resenha. Adiante, contrapõe corretamente o keynesianismo ortodoxo à retomada da TQM. Aos descrever a TQM enquanto teoria da demanda por moeda, deixou de pontuar que esta implica estabilidade na demanda por saldos monetários. Em seguida, ao introduzir a Curva de Phillips, escreve como se Friedman aceitasse o trade-off entre salários e inflação. Mais precisamente, ele afirmava que tal trade-off é temporário e duraria enquanto a ilusão monetária perdurasse. No parágrafo seguinte, por sua vez, fica claro que tal trade-off se dá no curto prazo. Dessa forma, há uma contradição entre esses dois parágrafos. A seguir, corretamente pontua as proposições tanto do lado da oferta quanto do lado da demanda. Mais ao fim, encerra a discussão pontuando as influências e fragilidades do monetarismo.
