--- a/Materias/2S2020/PED_CE342/Turma_A/222615.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/222615.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 240409 - Luísa Mendes Amstalden
+#+TITLE: 222615 - Moises Aparecido dos Santos Filho
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 240409
-#+PROPERTY: NOME "Luísa Mendes Amstalden"
+#+PROPERTY: RA 222615
+#+PROPERTY: NOME "Moises Aparecido dos Santos Filho"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -20,18 +20,18 @@
   #+BEGIN: columnview :maxlevel 3 :id global
   #+END
 
-* Resenha  1:  Monetaristas                                         :private:
+* Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
   :OBJETIVO: Atingido satisfatoriamente
   :ARGUMENTO: Atingido parcialmente
-  :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido totalmente
   :CLAREZA:  Atingido satisfatoriamente
   :NOTA:     Atingido satisfatoriamente
   :END:
-  
+
 ** Comentários individuais 
 
-Em seus parágrafos de abertura, destacou corretamente as implicações da escola monetarista e seu contraponto ao keynesianismo. O mesmo vale para a curva de Phillips aceleracionista e suas antecedentes. Ao explicar o mecanismo que gera inflação, incorreu em algumas imprecisões. Não mencionou que os agentes formam expectativas adaptativas e mencionou que as "expectativas aumentam". Mais precisamente, pode-se dizer que as expectativas são de que os preços aumentem. Um ponto importante também que não apareceu até agora é a da TQM. Uma implicação dela é que a demanda por moeda é estável e, assim, a sequência iniciada pela expansão da demanda agregada se verificaria. Fica aqui o registro de que apresentou as expectativas adaptativas mais adiante. Poderia ter antecipado esta discussão para facilitar a explicação da ilusão monetária. Mais a frente, corretamente destaca as proposições supply-side. Por fim, não houve nenhuma menção à TQM e suas implicações. Este último ponto é o que mais te prejudicou.
+Em seu parágrafo de abertura, corretamente contextualizou o monetarismo enquanto paradigma que sucedeu o keynesianismo ortodoxo. Além disso, destacou a importância da conjuntura econômica da década de 70 no debate acerca dos determinantes da inflação. Em relação a esse último ponto, tome nota que o monetarismo teve maior influência nas décadas de 50 e 60. Em seguida, é corretamente pontuada a neutralidade da moeda. No entanto, da forma que esta parece ser uma hipótese e não uma implicação do modelo monetarista. Somando os elementos pontuado na resenha à TQM, obtém-se a neutralidade da moeda e não o inverso. Mais a frente, corretamente recoloca a neutralidade da moeda enquanto resultado. Porém, seria necessário supor (também) que a demanda por moeda seja estável para que tal conclusão seja obtida. No parágrafo seguinte há uma discussão sobre a TQM. Vale destacar que a TQM implica estabilidade e não pressupõe estabilidade.
