--- a/Materias/2S2020/PED_CE342/Turma_A/244321.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/244321.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 240409 - Luísa Mendes Amstalden
+#+TITLE: 244321 - Sofia Helena de Oliveira Nery
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 240409
-#+PROPERTY: NOME "Luísa Mendes Amstalden"
+#+PROPERTY: RA 244321
+#+PROPERTY: NOME "Sofia Helena de Oliveira Nery"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -20,18 +20,18 @@
   #+BEGIN: columnview :maxlevel 3 :id global
   #+END
 
-* Resenha  1:  Monetaristas                                         :private:
+* Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
   :TAREFA:   Resenha 1
-  :OBJETIVO: Atingido satisfatoriamente
+  :OBJETIVO: Atingido parcialmente
   :ARGUMENTO: Atingido parcialmente
-  :CONCEITOS: Atingido parcialmente
-  :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
-  :CLAREZA:  Atingido satisfatoriamente
-  :NOTA:     Atingido satisfatoriamente
+  :CONCEITOS: Atingindo minimamente
+  :DESENVOLVIMENTO: Atingindo minimamente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingindo minimamente
+  :NOTA:     Atingido parcialmente
   :END:
-  
+
 ** Comentários individuais 
 
-Em seus parágrafos de abertura, destacou corretamente as implicações da escola monetarista e seu contraponto ao keynesianismo. O mesmo vale para a curva de Phillips aceleracionista e suas antecedentes. Ao explicar o mecanismo que gera inflação, incorreu em algumas imprecisões. Não mencionou que os agentes formam expectativas adaptativas e mencionou que as "expectativas aumentam". Mais precisamente, pode-se dizer que as expectativas são de que os preços aumentem. Um ponto importante também que não apareceu até agora é a da TQM. Uma implicação dela é que a demanda por moeda é estável e, assim, a sequência iniciada pela expansão da demanda agregada se verificaria. Fica aqui o registro de que apresentou as expectativas adaptativas mais adiante. Poderia ter antecipado esta discussão para facilitar a explicação da ilusão monetária. Mais a frente, corretamente destaca as proposições supply-side. Por fim, não houve nenhuma menção à TQM e suas implicações. Este último ponto é o que mais te prejudicou.
+Em seus parágrafos iniciais, destacou os elementos centrais do monetarismo. Apesar de não ser indispensável, seria interessante contextualizar esta escola (seja historicamente, seja em contraposição a outra e por ai vai). Adiante, expõe corretamente o conceito de taxa natural de desemprego. Ao descrever as curva de Phillips, incorre em algumas imprecisões. Apenas para exemplificar, diz que a ilusão monetária faz com que a taxa de desemprego oscile em torno da natural. Apesar de estar, no limite, correta poderia ter se aprofundado no porquê ocorre tal descolamento assim como descrever o que é esse fenômeno. Mais ao fim vi que contextualiza o monetarismo enquanto contraponto ao keynesianismo ortodoxo. Por fim, vale destacar que mal discorreu sobre a TQM e suas implicações.
